--- a/signup.html
+++ b/signup.html
@@ -20,7 +20,7 @@
     <nav class="transparent">
       <div class="container">
         <div class="nav-wrapper">
-          <a href="#" class="brand-logo">Quazzu</a>
+          <a href="index.html" class="brand-logo">Quazzu</a>
           <a href="#" data-activates="mobile-nav" class="button-collapse">
             <i class="fa fa-bars"></i>
           </a>
