--- a/solutions.html
+++ b/solutions.html
@@ -20,7 +20,7 @@
     <nav class="transparent">
       <div class="container">
         <div class="nav-wrapper">
-          <a href="#" class="brand-logo">Quazzu</a>
+          <a href="index.html" class="brand-logo">Quazzu</a>
           <a href="#" data-activates="mobile-nav" class="button-collapse">
             <i class="fa fa-bars"></i>
           </a>
@@ -266,7 +266,7 @@
 
   <!--Import jQuery before materialize.js-->
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-  <script type="text/javascript" src="assets/js/materialize.min.js"></script>
+  <script type="text/javascript" src="assets/js/materialize.min.js "></script>
   <script>
     $(document).ready(function () {
       $('.carousel.carousel-slider').carousel({ fullWidth: true });
